--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "shell",
             "label": "g++ build active file",
             "command": "/usr/bin/g++",
-            "args": ["-g", "${file}", "-o", "${fileDirname}/${fileBasenameNoExtension}"],
+            "args": ["-g", "${file}", "-o", "${fileDirname}/debug/${fileBasenameNoExtension}"],
             "options": {
               "cwd": "/usr/bin"
             },
