--- a/.gitignore
+++ b/.gitignore
@@ -301,3 +301,4 @@ modules.xml
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+debug/*
